--- a/sass/_category.scss
+++ b/sass/_category.scss
@@ -70,7 +70,7 @@
     }
   }
 }
-@media screen and (min-width: 568px) and (max-width: 897px) {
+@include minmax(569px, 897px) {
   .category {
     &__item {
       width: calc(50% - 22.5px);
@@ -83,8 +83,7 @@
     }
   }
 }
-
-@media screen and (min-width: 320px) and (max-width: 481px) {
+@include minmax(320px, 481px) {
   .category {
     &__item {
       width: 100%;
