--- a/sass/_feature.scss
+++ b/sass/_feature.scss
@@ -146,7 +146,7 @@
     }
   }
 }
-@media screen and (min-width: 568px) and (max-width: 897px) {
+@include minmax(568px, 897px) {
   .feature {
     padding-top: 6rem;
     &__image img {
@@ -160,7 +160,7 @@
     }
   }
 }
-@media screen and (min-width: 320px) and (max-width: 481px) {
+@include minmax(320px, 481px) {
   .feature {
     padding-top: 6rem;
     &__image img {
