--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -40,14 +40,14 @@
     display: block;
   }
 }
-@media screen and (min-width: 568px) and (max-width: 897px) {
+@include maxw(767px) {
   .header {
     &__menu {
       display: none;
     }
   }
 }
-@include maxw(767px) {
+@include minmax(568px, 897px) {
   .header {
     &__menu {
       display: none;
