--- a/sass/_mixin.scss
+++ b/sass/_mixin.scss
@@ -24,3 +24,8 @@
     @content;
   }
 }
+@mixin minmax($breakpoint1, $breakpoint2) {
+  @media screen and (min-width: $breakpoint1) and (max-width: $breakpoint2) {
+    @content;
+  }
+}
